# projekat_spp

doc/: dokumentacija.doc
examples/: multiply.mavn  multiply.s  simple.mavn  simple.s
src/: CMakeLists.txt  Constants.h  FiniteStateMachine.cpp  IR.h  LivenessAnalysis.cpp  LivenessAnalysis.h  MipsCode.cpp  MipsCode.h  ResourceAllocation.cpp  ResourceAllocation.h  SyntaxAnalysis.cpp  SyntaxAnalysis.h  Types.h  main.cpp
